@@ -38,6 +38,8 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
   - CHG: Polish operator splitSubPop, replace which to subPops, and add the feature
 		to split subpopulations by information field. Rename this operator to
 		splitSubPops.
+  - CHG: population::splitSubPop can no longer split by proportion. Please use operator
+		splitSubPops and its function form SplitSubPops instead.
 		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
